force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Conceal__c.field-meta.xml
<CustomField>
    <fullName>Loop__Conceal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this option is checked, data entered in this field during the signing process will not be visible to any of the signers or the sender.</inlineHelpText>
    <label>Conceal</label>
    <type>Checkbox</type>
</CustomField>