force-app/main/default/objects/Loop__SecureField__c/fields/Loop__dsParentValue__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsParentValue__c</fullName>
    <inlineHelpText>If the parent field equals this value, this secure field will be visible while the recipient is signing.</inlineHelpText>
    <label>Parent Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>