force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Locked__c.field-meta.xml
<CustomField>
    <fullName>Loop__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>