force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Selected__c.field-meta.xml
<CustomField>
    <fullName>Loop__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>