force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Value__c.field-meta.xml
<CustomField>
    <fullName>Loop__Value__c</fullName>
    <inlineHelpText>This can be made dynamic by using tags from the Field Tagger.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>