force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Width__c.field-meta.xml
<CustomField>
    <fullName>Loop__Width__c</fullName>
    <inlineHelpText>in pixels</inlineHelpText>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>