force-app/main/default/objects/Loop__SecureField__c/fields/Loop__X_Offset__c.field-meta.xml
<CustomField>
    <fullName>Loop__X_Offset__c</fullName>
    <inlineHelpText>Positive X Offset values move the tab right on the page.</inlineHelpText>
    <label>X Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>