force-app/main/default/objects/Loop__SecureField__c/fields/Loop__Y_Offset__c.field-meta.xml
<CustomField>
    <fullName>Loop__Y_Offset__c</fullName>
    <inlineHelpText>Positive Y Offset values move the tab down on the page.</inlineHelpText>
    <label>Y Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>