force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__Checkbox.recordType-meta.xml
<RecordType>
    <fullName>Loop__Checkbox</fullName>
    <active>true</active>
    <description>Checkbox field</description>
    <label>Checkbox</label>
</RecordType>