force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__List.recordType-meta.xml
<RecordType>
    <fullName>Loop__List</fullName>
    <active>true</active>
    <description>A list or drop down with two or more possible options</description>
    <label>List</label>
</RecordType>