force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__Other.recordType-meta.xml
<RecordType>
    <fullName>Loop__Other</fullName>
    <active>true</active>
    <description>Other types such as Signer Attachment, Approve Button, and Decline Button</description>
    <label>Other</label>
</RecordType>