force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__Radio.recordType-meta.xml
<RecordType>
    <fullName>Loop__Radio</fullName>
    <active>true</active>
    <description>Radio field</description>
    <label>Radio</label>
</RecordType>