force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__Text.recordType-meta.xml
<RecordType>
    <fullName>Loop__Text</fullName>
    <active>true</active>
    <description>Text field (e.g. plain text, email, date, number, ssn, zip, and zip-4)</description>
    <label>Text</label>
</RecordType>