force-app/main/default/objects/Loop__SecureField__c/recordTypes/Loop__Text_Area.recordType-meta.xml
<RecordType>
    <fullName>Loop__Text_Area</fullName>
    <active>true</active>
    <description>Text Area field</description>
    <label>Text Area</label>
</RecordType>